[package]
edition = "2021"
name = "napi-rust-xxh3"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.2.4", default-features = false, features = ["napi4"] }
napi-derive = "3.2.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[build-dependencies]
napi-build = "2.2.3"

[profile.release]
lto = true
strip = "symbols"
